--- a/.editorconfig
+++ b/.editorconfig
@@ -10,5 +10,10 @@ indent_size = 2
 indent_style = space
 indent_size = 2
 
+[*.md]
+indent_style = space
+indent_size = 2
+
+
 [Makefile]
 indent_style = tab
