--- a/python.yml
+++ b/python.yml
@@ -2,5 +2,6 @@
 - hosts: all
   tasks:
   - name: Install Python
-    shell: apt-get install -y python
+    # `shell` module used intentionally for reliable early bootstrap
+    shell: apt-get install -y python python-pip
     become: yes
