expand readme; move python-pip to later task

--- a/python.yml
+++ b/python.yml
@@ -2,5 +2,5 @@
 - hosts: all
   tasks:
   - name: Install Python
-    raw: apt-get install -y python python-pip
+    raw: apt-get install -y python
     become: yes
